--- a/app/src/main/res/layout/item_memo.xml
+++ b/app/src/main/res/layout/item_memo.xml
@@ -24,6 +24,8 @@
                     android:layout_margin="16dp"
                     android:text="@string/title"
                     android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,6 +36,8 @@
                     android:layout_margin="16dp"
                     android:text="@string/summary"
                     android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/titleView" />
 
