--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -3,8 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.hoony.kotlinsample.detail.DetailActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_share"
+        android:icon="@drawable/ic_share"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_share"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_alarm"
+        android:icon="@drawable/ic_alarm"
+        android:title="@string/action_alarm_setting"
         app:showAsAction="never" />
 </menu>
