--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -38,10 +38,19 @@
                     android:layout_height="wrap_content"
                     app:layout_collapseMode="parallax">
 
+                    <ImageView
+                        android:id="@+id/bgImage"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <com.hoony.kotlinsample.view.AlarmInfoView
                         android:id="@+id/alarmInfoView"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_margin="24dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -49,10 +58,18 @@
                     <com.hoony.kotlinsample.view.LocationInfoView
                         android:id="@+id/locationInfoView"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_marginStart="24dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/alarmInfoView" />
+
+                    <com.hoony.kotlinsample.view.WeatherInfoView
+                        android:id="@+id/weatherInfoView"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="24dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/locationInfoView" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
