--- a/app/src/main/res/layout/view_info.xml
+++ b/app/src/main/res/layout/view_info.xml
@@ -2,15 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:padding="8dp"
     tools:ignore="UseCompoundDrawables">
 
     <ImageView
         android:id="@+id/typeImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
         app:srcCompat="@drawable/ic_alarm"
         tools:ignore="ContentDescription" />
 
@@ -18,6 +21,9 @@
         android:id="@+id/infoText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp" />
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="8dp"
+        android:layout_weight="1"
+        android:textStyle="bold" />
 
 </LinearLayout>
