--- a/app/src/main/res/layout/fragment_memo_list.xml
+++ b/app/src/main/res/layout/fragment_memo_list.xml
@@ -5,7 +5,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".list.MemoListFragment">
+        tools:context=".memo.list.MemoListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/memoListView"
