--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -6,7 +6,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".list.ListActivity">
+        tools:context=".memo.list.ListActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
