--- a/app/src/main/res/layout/view_info.xml
+++ b/app/src/main/res/layout/view_info.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/typeImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
         app:srcCompat="@drawable/ic_alarm"
