--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -7,8 +7,8 @@
         android:layout_height="match_parent"
         tools:context=".content_provider.video.player.VideoPlayerActivity">
 
-        <TextureView
-            android:id="@+id/texture_view_video"
+        <com.google.android.exoplayer2.ui.PlayerView
+            android:id="@+id/player_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
