--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -9,6 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#70000000"
         tools:context=".content_provider.video.list.VideoActivity">
 
         <com.google.android.exoplayer2.ui.PlayerView
