--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -52,9 +52,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:text="@{video.dateAdded.toString()}"
+
             app:layout_constraintTop_toBottomOf="@id/tv_size"
             tools:text="Date" />
+<!--        android:text="@{video.dateAdded.toString()}"-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
