--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -26,16 +26,26 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="16dp"
+            app:borderColor="@color/white"
+            app:eyesColor="@color/white"
+            app:faceColor="@color/red"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:mouthColor="@color/white"
+            app:state="happy" />
 
         <com.hoony.kotlinsample.custom_view.EmotionalFaceView
             android:id="@+id/sad_button"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="16dp"
+            app:borderColor="@color/black"
+            app:eyesColor="@color/black"
+            app:faceColor="@color/grey"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:mouthColor="@color/black"
+            app:state="sad" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
