--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -10,6 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#555555"
         tools:context=".custom_view.CustomViewActivity">
 
         <com.hoony.kotlinsample.custom_view.EmotionalFaceView
