Dagger example update.

--- a/app/src/main/res/layout/activity_dagger_example_1.xml
+++ b/app/src/main/res/layout/activity_dagger_example_1.xml
@@ -11,7 +11,7 @@
         android:id="@+id/cl_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".dagger.DaggerActivity"
+        tools:context=".dagger.example1.DaggerActivity"
         tools:ignore="HardcodedText">
 
         <TextView
