--- a/app/src/main/res/layout/item_user_name.xml
+++ b/app/src/main/res/layout/item_user_name.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="user"
+            type="com.hoony.kotlinsample.room.db.table.user.User" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,6 +20,7 @@
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@{user.name}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
