--- a/app/src/main/res/layout/activity_rx_java_example_list.xml
+++ b/app/src/main/res/layout/activity_rx_java_example_list.xml
@@ -10,17 +10,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_height="match_parent"
+        tools:context=".rx_java.list.RxJavaExampleListActivity">
 
-        <TextView
-            android:id="@+id/tv_title"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Title" />
+            tools:listitem="@layout/item_single_text" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
