--- a/app/src/main/res/layout/activity_audio.xml
+++ b/app/src/main/res/layout/activity_audio.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_container"
+        android:id="@+id/clContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".content_provider.audio.AudioActivity">
