--- a/app/src/main/res/layout/activity_dagger_example_1.xml
+++ b/app/src/main/res/layout/activity_dagger_example_1.xml
@@ -8,7 +8,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_container"
+        android:id="@+id/clContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".dagger.example1.DaggerExample1Activity"
