--- a/app/src/main/res/layout/item_single_text.xml
+++ b/app/src/main/res/layout/item_single_text.xml
@@ -15,7 +15,7 @@
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:padding="16dp"
             android:textSize="16sp"
             android:gravity="center"
