--- a/app/src/main/res/layout/activity_ui_view_pager_with_recycler_view.xml
+++ b/app/src/main/res/layout/activity_ui_view_pager_with_recycler_view.xml
@@ -2,11 +2,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.hoony.kotlinsample.ui_example.view_pager_with_recycler_view.layout.ScrollableConstraintLayout
         android:id="@+id/clContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vpMain"
@@ -20,15 +19,15 @@
         <com.hoony.kotlinsample.ui_example.view_pager_with_recycler_view.observable_recycler_view.ObservableRecyclerView
             android:id="@+id/rvList"
             android:layout_width="0dp"
-            android:paddingTop="400dp"
-            android:clipToPadding="false"
             android:layout_height="0dp"
+            android:clipToPadding="false"
+            android:paddingTop="400dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.hoony.kotlinsample.ui_example.view_pager_with_recycler_view.layout.ScrollableConstraintLayout>
 
     <!--    <androidx.core.widget.NestedScrollView-->
     <!--        android:layout_width="match_parent"-->
