--- a/app/src/main/res/layout/activity_ui_view_pager_with_recycler_view.xml
+++ b/app/src/main/res/layout/activity_ui_view_pager_with_recycler_view.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui_example.view_pager_with_recycler_view.UIExampleActivity1">
 
     <com.hoony.kotlinsample.ui_example.view_pager_with_recycler_view.layout.OrientationConstraintLayout
         android:id="@+id/clContainer"
