--- a/app/src/main/res/layout/activity_view_pager_custom_view.xml
+++ b/app/src/main/res/layout/activity_view_pager_custom_view.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".custom_view.smile_emoticon_example.CustomViewActivity">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
+    <com.hoony.kotlinsample.custom_view.layout_contain_view_pager_example.CustomViewPagerView
+        android:id="@+id/viewPagerCustomView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
