--- a/app/src/main/res/layout/item_single_text_full_size.xml
+++ b/app/src/main/res/layout/item_single_text_full_size.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="200dp">
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
         android:layout_height="400dp"
         android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/cardBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
