--- a/app/src/main/res/layout/activity_kokoa_message.xml
+++ b/app/src/main/res/layout/activity_kokoa_message.xml
@@ -9,7 +9,7 @@
     tools:ignore="HardCodedText">
 
     <RadioGroup
-        android:id="@+id/messageKind"
+        android:id="@+id/messageType"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,12 +55,13 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/messageKind" />
+        app:layout_constraintTop_toBottomOf="@id/messageType" />
 
     <Button
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Send"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment" />
