커스텀 라디오 버튼 추가

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,4 +13,8 @@
             <enum name="sad" value="1" />
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="CustomRadioButton">
+        <attr name="text" format="string" />
+    </declare-styleable>
 </resources>
