--- a/app/src/main/res/layout/activity_custom_radio_group.xml
+++ b/app/src/main/res/layout/activity_custom_radio_group.xml
@@ -1,6 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <com.hoony.kotlinsample.custom_view.radio_group.CustomRadioGroup
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <com.hoony.kotlinsample.custom_view.radio_group.CustomRadioButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:text="@string/action_alarm" />
+
+
+    </com.hoony.kotlinsample.custom_view.radio_group.CustomRadioGroup>
+
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="0dp"-->
+    <!--        android:orientation="vertical"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent">-->
+
+    <!--        <com.hoony.kotlinsample.custom_view.radio_group.CustomRadioButton-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            app:text="@string/action_alarm" />-->
+
+    <!--        <com.hoony.kotlinsample.custom_view.radio_group.CustomRadioButton-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            app:text="@string/action_alarm" />-->
+
+    <!--        <com.hoony.kotlinsample.custom_view.radio_group.CustomRadioButton-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            app:text="@string/action_alarm" />-->
+
+
+    <!--    </LinearLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
