--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,6 +14,8 @@
         </attr>
     </declare-styleable>
 
+    <declare-styleable name="CustomRadioGroup" />
+
     <declare-styleable name="CustomRadioButton">
         <attr name="text" format="string" />
     </declare-styleable>
