라디오 그룹 예제 수정

--- a/app/src/main/res/layout/activity_custom_radio_group.xml
+++ b/app/src/main/res/layout/activity_custom_radio_group.xml
@@ -7,9 +7,8 @@
     <com.hoony.kotlinsample.custom_view.radio_group.CustomRadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
